--- a/business-code/business-cooperation/pom.xml
+++ b/business-code/business-cooperation/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>business-cooperation</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>business-cooperation</name>
-    <description>合作类型</description>
+    <description>business-cooperation</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
