--- a/business-code/business-common/pom.xml
+++ b/business-code/business-common/pom.xml
@@ -160,7 +160,11 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>2.1.3.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>6.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
