--- a/business-code/business-common/pom.xml
+++ b/business-code/business-common/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>business-common</artifactId>
     <description>公共工具</description>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
