--- a/business-code/business-cooperation/pom.xml
+++ b/business-code/business-cooperation/pom.xml
@@ -13,7 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>business-cooperation</name>
     <description>business-cooperation</description>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <properties>
         <java.version>1.8</java.version>
     </properties>
